--- a/letter.html
+++ b/letter.html
@@ -27,7 +27,7 @@
             margin: 0 auto;
             padding: 20px;
             position: relative;
-            z-index: 10;
+            z-index2: 10;
             opacity: 0;
             transform: translateY(20px);
             animation: fadeIn 3s forwards 0.5s;
