--- a/memorylane.html
+++ b/memorylane.html
@@ -30,7 +30,7 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        z-index: -1;
+        z-index2: -1;
         pointer-events: none;
       }
 
